# SFMLGame

./: .gitignore  CMakeLists.txt  DynMusicEngine.cpp  DynMusicEngine.h  Game  Makefile  makefile  makefile-dist.bak  makefile.bak
Data/: SOW_Cars.xml  example - g2d.xml  example - g2dtext.xml  example - strings.xml  example - uimanager.xml  example - window.xml  example.xml
Data/SSG/: Buildoverlay.xml  SSG_Game_UI.xml  example - ship.xml  example - universe.xml
Gamestates/: Game.xml
Gamestates/Startup/: Doc.txt
Launch/: SFGLogo.png.xml
Script/: script - test.cpp
headers/: AI.h  Camera.h  Context.h  DLL.h  DLLWrapper.h  DebugWindow.h  ExtensionInterface.h  Game.h  GameConsole.h  GameSettings.h  GameState.h  Interactable.h  KeyMapper.h  Lighting.h  Message.h  Network.h  Object.h  PE_Matrix.h  PE_Vector.h  Physics.h  Pointer.h  Polygon.h  Profiler.h  Rect.h  SOW_AI.h  SOW_Car.h  SOW_Game.h  SOW_Road.h  SOW_World.h  SOW_main.h  SSG_BuildOverlay.h  SSG_CelestialObjectContainer.h  SSG_Character.h  SSG_Galaxy.h  SSG_Game.h  SSG_Part.h  SSG_Planet.h  SSG_PlanetSurface.h  SSG_Ship.h  SSG_SolarSystem.h  (+13 more)
src/: AI.cpp  Camera.cpp  Context.cpp  DLL.cpp  DLLWrapper.cpp  DebugWindow.cpp  ExtensionInterface.cpp  Game.cpp  GameConsole.cpp  GameSettings.cpp  GameState.cpp  KeyMapper.cpp  Lighting.cpp  Message.cpp  Network.cpp  Object.cpp  Physics.cpp  Pointer.cpp  Polygon.cpp  Profiler.cpp  Rect.cpp  SOW_AI.cpp  SOW_Car.cpp  SOW_Game.cpp  SOW_Road.cpp  SOW_World.cpp  SOW_main.cpp  SSG_BuildOverlay.cpp  SSG_Galaxy.cpp  SSG_Game.cpp  SSG_Part.cpp  SSG_Planet.cpp  SSG_PlanetSurface.cpp  SSG_Ship.cpp  SSG_SolarSystem.cpp  SSG_Universe.cpp  SSG_main.cpp  StringManager.cpp  System.cpp  TopView.cpp  (+7 more)
tpl/: SSG_CelestialObjectContainer.cpp
